Fix sonar complain